# flex-diary

./: .gitmodules  Architecture.md  Dockerfile  README.md  build.gradle  deployment.yaml  docker-compose.azure.yaml  docker-compose.local.yaml  docker-compose.yml  flex-diary.code-workspace  mongodb-deployment.yaml  package-lock.json  package.json  vite.config.ts
api/: .gitignore  Dockerfile  build.gradle  entrypoint.sh  pyproject.toml  settings.gradle
api/app/: Dependency.py  Main.py  dependencies.py  main.py
api/app/Models/Mongo/: User.py
api/app/Repositories/: IUserRepository.py  UserRepositoryImpl.py
api/app/Routers/: UserRouter.py
api/app/Schemas/: UserSchema.py
api/app/Services/: UserService.py
api/app/interfaces/: repository_interface.py  service_interface.py  unit_of_work_interface.py
api/app/repositories/: diary_repository.py
api/app/routers/: diary_router.py
api/app/schemas/: diary_dto.py  diary_schema.py
api/app/services/: diary_service.py
api/app/utils/: converter.py  exceptions.py  handler.py  result.py
api/data/: diaries.json  users.json
api/src/main/kotlin/com/flexdiary/controller/: TemplateController.kt
api/src/main/kotlin/com/flexdiary/repository/: DiaryRepository.kt  TemplateRepository.kt
api/src/main/resources/: application-dev.properties
api/src/test/kotlin/com/flexdiary/: FlexDiaryApplicationTests.kt
src/: App.tsx
src/app/: hooks.ts  store.ts
src/features/diary/: diarySlice.ts
src/main/resources/: application.properties  application.test.properties
ui/: Dockerfile
ui/src/: main.tsx
(+8 files in other folders)
