[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["hiraos <huisipingwei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
motor = "^3.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
