[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["hiraos <huisipingwei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
motor = "^3.5.1"
pydantic = "^2.8.2"
debugpy = "^1.8.5"
beanie = "^1.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "pydantic.mypy"
files = "app/**/*.py"
check_untyped_defs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312" # Pythonのバージョンを指定
lint.ignore = ["D","TD002","TD003","FIX002","F401","N999"]
lint.select = ["ALL"] # すべてのルールを適用する
lint.pydocstyle.convention = "google"
lint.flake8-bugbear.extend-immutable-calls = [
    # Whitelisted default arguments
    "fastapi.Header",
    "fastapi.Depends",
]
